fixed: left alignment of submit button if no options

--- a/src/styles/components/chat/_chat-prompt-wrapper.scss
+++ b/src/styles/components/chat/_chat-prompt-wrapper.scss
@@ -186,6 +186,7 @@
                     gap: var(--mynah-sizing-2);
                     flex-flow: row nowrap;
                     align-items: center;
+                    justify-content: flex-end;
                     overflow: visible;
                     width: 100%;
 
